# Qt_tset

ChatCPP_noboost/: CMakeLists.txt
ChatCPP_noboost/deploy/: Chat
ChatCPP_noboost/sources/: Test.cpp  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
ChatCPP_noboost/translations/: my_ru.qm  my_ru.ts
